tests/NormalTests/paczka1/small_fuzzy/35613017.err
Error in line 1: ygKDnQp A439 40,5
Error in line 3: A351 S797 0,2
Error in line 13: 4zT4x A351 9,6
